--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,5 +1,5 @@
 ---
-ayout: page
+layout: page
 permalink: /404.html
 title: "Page not found"
 description: "Looks like there has been a mistake. Nothing exists here."
