--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -28,3 +28,27 @@
                   month = \{feb\}
                   \}}
 }
+
+@misc{https://doi.org/10.48550/arxiv.2206.03695,
+  abbr        = {arXiv},
+  selected    = {true},
+  bibtex_show = {true},
+  doi         = {10.48550/ARXIV.2206.03695},
+  url         = {https://arxiv.org/abs/2206.03695},
+  author      = {Crisostomi, Donato and Antonelli, Simone and Maiorca, Valentino and Moschella, Luca and Marin, Riccardo and Rodolà, Emanuele},
+  keywords    = {Machine Learning (cs.LG), Artificial Intelligence (cs.AI), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  title       = {Metric Based Few-Shot Graph Classification},
+  publisher   = {arXiv},
+  year        = {2022},
+  copyright   = {arXiv.org perpetual, non-exclusive license},
+  bib         = {@misc\{https://doi.org/10.48550/arxiv.2206.03695,
+                 doi       = \{10.48550/ARXIV.2206.03695\},
+                 url       = \{https://arxiv.org/abs/2206.03695\},
+                 author    = \{Crisostomi, Donato and Antonelli, Simone and Maiorca, Valentino and Moschella, Luca and Marin, Riccardo and Rodolà, Emanuele\},
+                 keywords  = \{Machine Learning (cs.LG), Artificial Intelligence (cs.AI), FOS: Computer and information sciences, FOS: Computer and information sciences\},
+                 title     = \{Metric Based Few-Shot Graph Classification\},
+                 publisher = \{arXiv\},
+                 year      = \{2022\},
+                 copyright = \{arXiv.org perpetual, non-exclusive license\}
+                 \}}
+}
