Add blogpost to bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -33,6 +33,7 @@
   abbr        = {arXiv},
   selected    = {true},
   bibtex_show = {true},
+  blog        = {https://crisostomi.com/project/fs-gc/},
   doi         = {10.48550/ARXIV.2206.03695},
   url         = {https://arxiv.org/abs/2206.03695},
   author      = {Crisostomi, Donato and Antonelli, Simone and Maiorca, Valentino and Moschella, Luca and Marin, Riccardo and Rodolà, Emanuele},
