--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,36 +1,9 @@
 ---
 ---
 
-@article{10.1145/3519022,
-  abbr         = {ACM},
-  selected     = {true},
-  bibtex_show  = {true},
-  author       = {Antonelli, S. and Avola, D. and Cinque, L. and Crisostomi, D. and Foresti, G. and Galasso, F. and Marini, M. and Mecca, A. and Pannone, D.},
-  contribution = {Antonelli, Crisostomi, Mecca},
-  title        = {Few-Shot Object Detection: A Survey},
-  year         = {2022},
-  abstract     = {Deep Learning approaches have recently raised the bar in many fields, from Natural Language Processing to Computer Vision, by leveraging large amounts of data. However, they could fail when the retrieved information is not enough to fit the vast number of parameters, frequently resulting in overfitting and, therefore, in poor generalizability. Few-Shot Learning aims at designing models which can effectively operate in a scarce data regime, yielding learning strategies that only need few supervised examples to be trained. These procedures are of both practical and theoretical importance, as they are crucial for many real-life scenarios in which data is either costly or even impossible to retrieve. Moreover, they bridge the distance between current data-hungry models and human-like generalization capability. Computer Vision offers various tasks which can be few-shot inherent, such as person re-identification. This survey, which to the best of our knowledge is the first tackling this problem, is focused on Few-Shot Object Detection, which has received far less attention compared to Few-Shot Classification due to the intrinsic challenge level. In this regard, this review presents an extensive description of the approaches that have been tested in the current literature, discussing their pros and cons, and classifying them according to a rigorous taxonomy.},
-  journal      = {ACM Comput. Surv.},
-  month        = {feb},
-  url          = {https://doi.org/10.1145/3519022},
-  bib          = {@article\{10.1145/3519022,
-                  author = \{Antonelli, Simone and Avola, Danilo and Cinque, Luigi and Crisostomi, Donato and Foresti, Gian Luca and Galasso, Fabio and Marini, Marco Raoul and Mecca, Alessio and Pannone, Daniele\},
-                  title = \{Few-Shot Object Detection: A Survey\},
-                  year = \{2022\},
-                  publisher = \{Association for Computing Machinery\},
-                  address = \{New York, NY, USA\},
-                  issn = \{0360-0300\},
-                  url = \{https://doi.org/10.1145/3519022\},
-                  doi = \{10.1145/3519022\},
-                  abstract = \{Deep Learning approaches have recently raised the bar in many fields, from Natural Language Processing to Computer Vision, by leveraging large amounts of data. However, they could fail when the retrieved information is not enough to fit the vast number of parameters, frequently resulting in overfitting and, therefore, in poor generalizability. Few-Shot Learning aims at designing models which can effectively operate in a scarce data regime, yielding learning strategies that only need few supervised examples to be trained. These procedures are of both practical and theoretical importance, as they are crucial for many real-life scenarios in which data is either costly or even impossible to retrieve. Moreover, they bridge the distance between current data-hungry models and human-like generalization capability. Computer Vision offers various tasks which can be few-shot inherent, such as person re-identification. This survey, which to the best of our knowledge is the first tackling this problem, is focused on Few-Shot Object Detection, which has received far less attention compared to Few-Shot Classification due to the intrinsic challenge level. In this regard, this review presents an extensive description of the approaches that have been tested in the current literature, discussing their pros and cons, and classifying them according to a rigorous taxonomy.\},
-                  note = \{Just Accepted\},
-                  journal = \{ACM Comput. Surv.\},
-                  month = \{feb\}
-                  \}}
-}
 
 @misc{https://doi.org/10.48550/arxiv.2206.03695,
-  abbr        = {arXiv},
+  abbr        = {Preprint},
   selected    = {true},
   bibtex_show = {true},
   blog        = {https://crisostomi.com/project/fs-gc/},
@@ -52,4 +25,31 @@
                  year      = \{2022\},
                  copyright = \{arXiv.org perpetual, non-exclusive license\}
                  \}}
+}
+
+@article{10.1145/3519022,
+  abbr         = {ACM},
+  selected     = {true},
+  bibtex_show  = {true},
+  author       = {Antonelli, S. and Avola, D. and Cinque, L. and Crisostomi, D. and Foresti, G. and Galasso, F. and Marini, M. and Mecca, A. and Pannone, D.},
+  contribution = {Antonelli, Crisostomi, Mecca},
+  title        = {Few-Shot Object Detection: A Survey},
+  year         = {2022},
+  abstract     = {Deep Learning approaches have recently raised the bar in many fields, from Natural Language Processing to Computer Vision, by leveraging large amounts of data. However, they could fail when the retrieved information is not enough to fit the vast number of parameters, frequently resulting in overfitting and, therefore, in poor generalizability. Few-Shot Learning aims at designing models which can effectively operate in a scarce data regime, yielding learning strategies that only need few supervised examples to be trained. These procedures are of both practical and theoretical importance, as they are crucial for many real-life scenarios in which data is either costly or even impossible to retrieve. Moreover, they bridge the distance between current data-hungry models and human-like generalization capability. Computer Vision offers various tasks which can be few-shot inherent, such as person re-identification. This survey, which to the best of our knowledge is the first tackling this problem, is focused on Few-Shot Object Detection, which has received far less attention compared to Few-Shot Classification due to the intrinsic challenge level. In this regard, this review presents an extensive description of the approaches that have been tested in the current literature, discussing their pros and cons, and classifying them according to a rigorous taxonomy.},
+  journal      = {ACM Comput. Surv.},
+  url          = {https://doi.org/10.1145/3519022},
+  bib          = {@article\{10.1145/3519022,
+                  author = \{Antonelli, Simone and Avola, Danilo and Cinque, Luigi and Crisostomi, Donato and Foresti, Gian Luca and Galasso, Fabio and Marini, Marco Raoul and Mecca, Alessio and Pannone, Daniele\},
+                  title = \{Few-Shot Object Detection: A Survey\},
+                  year = \{2022\},
+                  publisher = \{Association for Computing Machinery\},
+                  address = \{New York, NY, USA\},
+                  issn = \{0360-0300\},
+                  url = \{https://doi.org/10.1145/3519022\},
+                  doi = \{10.1145/3519022\},
+                  abstract = \{Deep Learning approaches have recently raised the bar in many fields, from Natural Language Processing to Computer Vision, by leveraging large amounts of data. However, they could fail when the retrieved information is not enough to fit the vast number of parameters, frequently resulting in overfitting and, therefore, in poor generalizability. Few-Shot Learning aims at designing models which can effectively operate in a scarce data regime, yielding learning strategies that only need few supervised examples to be trained. These procedures are of both practical and theoretical importance, as they are crucial for many real-life scenarios in which data is either costly or even impossible to retrieve. Moreover, they bridge the distance between current data-hungry models and human-like generalization capability. Computer Vision offers various tasks which can be few-shot inherent, such as person re-identification. This survey, which to the best of our knowledge is the first tackling this problem, is focused on Few-Shot Object Detection, which has received far less attention compared to Few-Shot Classification due to the intrinsic challenge level. In this regard, this review presents an extensive description of the approaches that have been tested in the current literature, discussing their pros and cons, and classifying them according to a rigorous taxonomy.\},
+                  note = \{Just Accepted\},
+                  journal = \{ACM Comput. Surv.\},
+                  month = \{feb\}
+                  \}}
 }
