add tmlr 2025 paper and update website

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,22 @@
 ---
 ---
+@article{antonelli2025nodelevel,
+  title={Node-Level Data Valuation on Graphs},
+  author={Simone Antonelli and Aleksandar Bojchevski},
+  journal={Transactions on Machine Learning Research},
+  issn={2835-8856},
+  year={2025},
+  url={https://openreview.net/forum?id=tNyApIqDSJ},
+  note={},
+  abbr={TMLR},
+  selected={true},
+  bibtex_show={true},
+  code={https://github.com/siantonelli/graph_valuation},
+  pdf={https://openreview.net/pdf?id=tNyApIqDSJ},
+  abstract={We propose a novel framework for node-level data valuation on graphs, which quantifies the contribution of individual nodes to the performance of graph neural networks. Our approach leverages concepts from cooperative game theory to assign value scores to nodes based on their influence on model predictions.},
+  preview={dv.png},
+}
+
 @InProceedings{pmlr-v202-h-zargarbashi23a,
   title = 	 {Conformal Prediction Sets for Graph Neural Networks},
   author =       {H. Zargarbashi, Soroush and Antonelli, Simone and Bojchevski, Aleksandar},
@@ -61,7 +78,6 @@ articleno = {242},
 numpages = {37},
 keywords = {benchmarks and metrics for object detection, dataset for object detection, Deep learning for few-shot object detection},
 abbr        = {ACM},
-selected    = {true},
 bibtex_show = {true},
 preview={survey.png},
 }
